[package]
name = "MarvelRivalsModManager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
image = "0.25.5"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
zip = "2.2.2"
sevenz-rust = "0.5"
unrar = "0.5.7"
winit = "0.30.7"

[build-dependencies]
winresource = "0.1.19"
