[package]
name = "marvel_rivals_mod_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
image = "0.25.5"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
zip = "2.2.2"
sevenz-rust = "0.6.1"
steamlocate = "2.0.0"
open = "5.3.1"

[[bin]]
name = "Manager"
path = "src/bin/mod_manager.rs"

[[bin]]
name = "Builder"
path = "src/bin/builder.rs"